--- a/booking/templates/profiledoctor.html
+++ b/booking/templates/profiledoctor.html
@@ -250,11 +250,11 @@
 
                         <div style="background-color: rgb(23, 82, 0)">
 
-                            <div class=" card" style="width: 18rem;margin: 8px;">
+                            <div class=" card" style="width: auto;margin: 8px;">
 
 
                                 <div class="card-body">
-                                    <h5 class="card-title">Reserva de {{appoint.patient}} </h5>
+                                    <h5 class="card-title">Booking from {{appoint.patient}}</h5>
                                     <p class="card-text">Patient Phone : {{appoint.patient.phone}}</p>
                                     <p class="card-text">Patient email : {{appoint.patient.user.email}}</p>
                                     <p class="card-text">Comments : {{appoint.comment}}</p>
@@ -322,11 +322,11 @@
 
                         <div style="background-color: rgb(240, 201, 96)">
 
-                            <div class=" card" style="width: 18rem;margin: 8px;">
+                            <div class=" card" style="width: auto;margin: 8px;">
 
 
                                 <div class="card-body">
-                                    <h6 class="card-title">Reserva de {{appoint.patient}} ( Esperando por aprobar... )
+                                    <h6 class="card-title">Booking from {{appoint.patient}} ( Esperando por aprobar... )
                                     </h6>
                                     <p class="card-text">Patient Phone : {{appoint.patient.phone}}</p>
                                     <p class="card-text">Patient email : {{appoint.patient.user.email}}</p>
@@ -375,7 +375,7 @@
 
 
 
-                            <div class=" card" style="width: 18rem;margin: 8px;">
+                            <div class=" card" style="width: auto;margin: 8px;">
 
 
                                 <div class="card-body">
