--- a/booking/templates/profilepatient.html
+++ b/booking/templates/profilepatient.html
@@ -87,11 +87,11 @@
                         <div style="background-color: rgb(23, 82, 0)">
 
 
-                            <div class=" card" style="width: 18rem;margin: 8px;">
+                            <div class=" card" style="width: auto;margin: 8px;">
 
 
                                 <div class="card-body">
-                                    <h5 class="card-title">Reserva con {{appoint.doctor}}</h5>
+                                    <h5 class="card-title">Booking from {{appoint.doctor}}</h5>
                                     <p class="card-text">Comments : {{appoint.comment}}</p>
                                     <p>{{appoint.datetime|date:"l d F Y"}}</p>
                                     <p>TIME : {{appoint.datetime|date:"g:i a"}}</p>
@@ -164,11 +164,11 @@
 
                         <div style="background-color: rgb(240, 201, 96);">
 
-                            <div class=" card" style="width: 18rem;margin: 8px">
+                            <div class=" card" style="width: auto;margin: 8px">
 
 
                                 <div class="card-body">
-                                    <h6 class="card-title">Reserva con {{appoint.doctor}}( Esperando por
+                                    <h6 class="card-title">Booking from {{appoint.doctor}}( Esperando por
                                         aprobar... )</h6>
                                     <p class="card-text">Comments : {{appoint.comment}}</p>
                                     <p>{{appoint.datetime|date:"l d F Y"}}</p>
@@ -240,11 +240,11 @@
 
 
 
-                            <div class=" card" style="width: 18rem;margin: 8px;">
+                            <div class=" card" style="width: auto;margin: 8px;">
 
 
                                 <div class="card-body">
-                                    <h5 class="card-title">Reserva con {{appoint.doctor}}</h5>
+                                    <h5 class="card-title">Booking from {{appoint.doctor}}</h5>
                                     <p class="card-text">Comments : {{appoint.comment}}</p>
                                     <p>{{appoint.datetime|date:"l d F Y"}}</p>
                                     <p>TIME : {{appoint.datetime|date:"g:i a"}}</p>
