--- a/booking/templates/registerdoctor.html
+++ b/booking/templates/registerdoctor.html
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group">
             </br>
-            <label for="specialist" for="specialist">Especialista</label>
+            <label for="specialist" for="specialist">Specialist</label>
             <select class="form-control" name="specialist" id="specialist">
                 <option value="Kinesiologia">Kinesiologia</option>
                 <option value="Masajista">Masajista</option>
