--- a/booking/static/styles.css
+++ b/booking/static/styles.css
@@ -27,3 +27,22 @@ footer {
   align-items: center;
   text-align: center;
 }
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  text-align: middle;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+button.accordion.active,
+button.accordion:hover {
+  background-color: #ddd;
+}
+p {
+  font-size: 1rem;
+}
