--- a/booking/templates/index.html
+++ b/booking/templates/index.html
@@ -20,7 +20,7 @@ height: 50vh;
                 <div class="container-fluid" style="padding: 25px;"></div>
                 <p class="fs-1 fw-bold">Terapia Natural con Kinesiología</p>
 
-                <p class="fs-4">
+                <p>
                     No invasiva, con la que se puede tratar y mejorar cualquier desequilibrio a nivel
                     fisico, emocional o
                     mental.
@@ -45,21 +45,18 @@ height: 50vh;
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption ">
                 <h5>Kinesiología</h5>
-                <p class="fs-6">Enfoques terapéuticos holísticos que abordan la salud y el bienestar desde una
-                    perspectiva de
-                    conexión entre el cuerpo,
-                    la mente y la energía. La kinesiología energética utiliza técnicas como el test muscular para
+                <p>La kinesiología energética utiliza técnicas como el test muscular para
                     evaluar y restablecer el
                     flujo energético en el cuerpo..</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
                 <h5>Quiropraxia</h5>
-                <p class="fs-6">La quiropraxia está indicada para procesos como afecciones de la columna vertebral,
+                <p>La quiropraxia está indicada para procesos como afecciones de la columna vertebral,
                     dolor de espalda,
                     brazos y piernas</p>
             </div>
@@ -67,7 +64,7 @@ height: 50vh;
         <div class="carousel-item">
             <img src="https://img.freepik.com/psd-gratis/sala-fisioterapia-ia-generativa_587448-2101.jpg?w=1800&t=st=1702062590~exp=1702063190~hmac=19b45907ff87cba1bd80458bf99d7a8b9943fd6de13041e4221a84c48ff2d64a"
                 class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
                 <h5>Masajes</h5>
                 <p class="fs-6">Este masaje combina técnicas manuales descontracturantes y relajantes para reducir o
                     eliminar
