--- a/booking/templates/login.html
+++ b/booking/templates/login.html
@@ -3,19 +3,19 @@
 {% block body %}
 
 
-
+{% if message %}
+<div>{{ message }}</div>
+{% endif %}
 
 <div class="container">
-    {% if message %}
-    <div>{{ message }}</div>
-    {% endif %}
+
     <h2>Login</h2>
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        <div class="form-group">
+        <div class="form-group" style="margin-bottom: 15px; margin-top: 15px;">
             <input autofocus class="form-control" type="text" name="email" placeholder="Email">
         </div>
-        <div class="form-group">
+        <div class="form-group" style="margin-bottom: 15px;">
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
         <input class="btn btn-primary" type="submit" value="Login">
