--- a/booking/templates/profilepatient.html
+++ b/booking/templates/profilepatient.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% load static %}
 {% block body %}
+
+
 {% if messages %}
 {% for message in messages %}
 <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
@@ -9,13 +11,12 @@
 </div>
 {% endfor %}
 {% endif %}
-{% if message %}
-<div>{{ message }}</div>
-{% endif %}
+
+
 <div class="container-fluid" style=" padding: 35px;">
 
 
-
+    <!-- Profile -->
     <p class="fs-2">Profile {{patient.user.first_name}} </p>
     </br>
     <div>{% if not patient.phone %}
@@ -67,6 +68,9 @@
 </div>
 <div class="container-fluid" style=" padding: 35px;">
     <div class="accordion accordion-flush" id="accordionFlushExample">
+
+        <!-- Next Appointments -->
+
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -95,37 +99,6 @@
                                     <p class="card-text">Comments : {{appoint.comment}}</p>
                                     <p>{{appoint.datetime|date:"l d F Y"}}</p>
                                     <p>TIME : {{appoint.datetime|date:"g:i a"}}</p>
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                        data-bs-target="#exampleModal">
-                                        Cancel Appointment
-                                    </button>
-
-                                    <!-- Modal -->
-                                    <div class="modal fade" id="exampleModal" tabindex="-1"
-                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete
-                                                        Appointment
-                                                    </h1>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    If you continue is not going back , you are going to cancel de
-                                                    session.
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary"
-                                                        data-bs-dismiss="modal">Close</button>
-                                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
-                                                        class="btn btn-primary">Cancel
-                                                        Appointment</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
 
                                 </div>
                             </div>
@@ -144,6 +117,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- Appointments for Approve -->
+
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingTwo">
                 <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
@@ -217,6 +193,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- Canceled Appointments -->
+
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
                 <button class="accordion-button collapsed  " type="button" data-bs-toggle="collapse"
@@ -266,155 +245,3 @@
 </div>
 
 {% endblock %}
-<!--
-<div>
-    <div style="padding: 35px 0 35px 35px">
-        <h5>Nexts Appointments</h5>
-    </div>
-    <div class="d-flex flex-wrap"
-        style="align-items: center;padding: 25px; text-align: center;background-color: beige;">
-        {% if appointment.length != 0 %}
-        {% for appoint in appointment %}
-        {% if appoint.approved and not appoint.canceled %}
-
-        <div style="background-color: rgb(240, 201, 96)">
-
-
-            <div class=" card" style="width: 18rem;margin: 8px;">
-
-
-                <div class="card-body">
-                    <h5 class="card-title">Reserva con {{appoint.doctor}}</h5>
-                    <p class="card-text">Comments : {{appoint.comment}}</p>
-                    <p>{{appoint.datetime}}</p>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Cancel Appointment
-                    </button>-->
-
-<!-- Modal -->
-<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    If you continue is not going back , you are going to cancel de session.
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
-                                        class="btn btn-primary">Cancel
-                                        Appointment</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-        {% endif %}
-        {%endfor%}
-    </div>
-
-
-    <div style="padding: 35px 0 35px 35px">
-        <h5>Appointments for approve</h5>
-    </div>
-    <div class="d-flex flex-wrap"
-        style="align-items: center;padding: 25px; text-align: center; background-color: bisque; ">
-
-        {% for appoint in appointment %}
-        {% if not appoint.approved and not appoint.canceled%}
-
-        <div style="background-color: rgb(240, 201, 96);">
-
-            <div class=" card" style="width: 18rem;margin: 8px">
-
-
-                <div class="card-body">
-                    <h6 class="card-title">Reserva con {{appoint.doctor}}( Esperando por
-                        aprobar... )</h6>
-                    <p class="card-text">Comments : {{appoint.comment}}</p>
-                    <p>{{appoint.datetime}}</p>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Cancel Appointment
-                    </button>
-
-                     Modal -->
-<!--  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    If you continue is not going back , you are going to cancel de session.
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
-                                        class="btn btn-primary">Cancel
-                                        Appointment</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        {% endif %}
-        {%endfor%}
-
-        {%else%}
-
-
-
-        <div> No Appoinment Found </div>
-
-        {%endif%}
-    </div>
-    <div style="padding: 35px 0 35px 35px">
-        <h5>Canceled Appointments</h5>
-    </div>
-    <div class="d-flex flex-wrap" style="align-items: center;padding: 25px; text-align: center;">
-        {% for appoint in appointment %}
-        {% if appoint.canceled %}
-        <div style="background-color: brown">
-
-
-
-
-            <div class=" card" style="width: 18rem;margin: 8px;">
-
-
-                <div class="card-body">
-                    <h5 class="card-title">Reserva con {{appoint.doctor}}</h5>
-                    <p class="card-text">Comments : {{appoint.comment}}</p>
-                    <p>{{appoint.datetime}}</p>
-
-
-
-                </div>
-            </div>
-
-
-        </div>
-        {% endif %}
-        {%endfor%}
-    </div>
-</div>
-
-</div> -->
