--- a/booking/templates/profiledoctor.html
+++ b/booking/templates/profiledoctor.html
@@ -231,7 +231,7 @@
 
 <!-- Appointments -->
 <div class="container-fluid" style=" padding: 35px;">
-    <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion accordion-flush" id="accordionFlushExample" style=" margin-bottom: 45px;">
 
         <!-- Next Appointments -->
 
@@ -343,7 +343,37 @@
                                     <p>TIME : {{appoint.datetime|date:"g:i a"}}</p>
                                     <a onclick="approved({{appoint.id}})" class="btn btn-primary">Approve
                                         appointmtent</a>
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                        data-bs-target="#exampleModal">
+                                        Cancel Appointment
+                                    </button>
 
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="exampleModal" tabindex="-1"
+                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete
+                                                        Appointment
+                                                    </h1>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    If you continue is not going back , you are going to cancel de
+                                                    session.
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary"
+                                                        data-bs-dismiss="modal">Close</button>
+                                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
+                                                        class="btn btn-primary">Cancel
+                                                        Appointment</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
