--- a/booking/templates/reserva.html
+++ b/booking/templates/reserva.html
@@ -34,7 +34,7 @@
             <p>Email : {{patient.user.email}} </p>
         </div>
 
-        <div>
+        <div style=" margin-bottom: 45px;">
             </br>
             <div class="category_div" id="category_div">
                 <label for="specialist">Select who you want the consultation with</label>
